Resharding oplog application shouldn't use a unique lsid for each delete operation

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.5
    • Affects Version/s: None
    • Component/s: None
    • None
    • Cluster Scalability
    • Fully Compatible
    • v8.0, v6.0
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Resharding oplog application applies each delete operation in a transaction. Each one uses a brand new lsid and txnNumber=0.

      While this is correct, using so many unique lsids can be problematic, as it makes the number of active sessions in the system grow without bounds. Instead, we could make each applier thread use it's own lsid, and use an incremented txnNumber to apply each one of the deletes.

            Assignee:
            Randolph Tan
            Reporter:
            Jordi Serra Torrens
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: