SERVER-92420 Resharding oplog application shouldn't use a unique lsid for each delete operation (#25133)

GitOrigin-RevId: d7812eda48d99341c1073c7104fb5f571e496704